[package]
name = "ak09915_rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A Rust library for interacting with the AK09915 magnetometer"
homepage = "https://docs.bluerobotics.com/AK09915-rs/ak09915_rs"
documentation = "https://docs.rs/ak09915_rs"
repository = "https://github.com/bluerobotics/AK09915-rs"
readme = "README.md"
categories = ["embedded"]
keywords = ["magnetometer", "sensor", "embedded", "ak09915", "AsahiKASEI"]

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
clap = { version = "4.2.2", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
embedded-hal-mock = { version = "0.10.0", features = ["eh1"] }
linux-embedded-hal = "0.4"

[[bench]]
name = "bench"
harness = false
